name:                htws
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/yoshitsugu/htws#readme
license:             BSD3
license-file:        LICENSE
author:              Kota Yoshitsugu
maintainer:          kootaa1206@yahoo.co.jp
copyright:           2016 Kota Yoshitsugu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable htws
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , aeson
                     , conduit
                     , network
                     , http-types
                     , authenticate-oauth
                     , containers
                     , time
                     , bytestring
  other-modules: MyOAuthConfig